<resources>
    <string name="app_name">Movie Finder</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="overview">Miles Morales is juggling his life between being a high school student and being Spider-Man. However, when Wilson \"Kingpin\" Fisk uses a super collider, another Spider-Man from another dimension, Peter Parker, accidentally winds up in Miles\' dimension. As Peter trains Miles to become a better Spider-Man, they are soon joined by four other Spider-Men from across the \"Spider-Verse\". As all these clashing dimensions start to tear Brooklyn apart, Miles must help the others stop Fisk and return everyone to their own dimensions.</string>
    <string name="shortOverview">Miles Morales is juggling his life between being a high school student and being Spider-Man. However, when Wilson ...</string>
    <string name="spiderman">Spiderman</string>
    <string name="quotes">quotes</string>
    <string name="_7_0">7.0</string>
    <string name="rating">rating</string>
    <string name="duration">duration</string>
    <string name="en">EN</string>
    <string name="language">language</string>
    <string name="_128">128</string>
    <string name="genre">genre</string>
    <string name="overviewLabel">overview</string>
    <string name="up_coming">Up Coming</string>
    <string name="discover">Discover</string>
    <string name="now_playing">Now Playing</string>
    <string name="_1998_04_10">1998-04-10</string>
    <string name="release_date">release date</string>
    <string name="search_movie">Search Movie</string>
    <string name="change_language_settings">Change Language</string>
    <string name="favorite">Favorite</string>
    <string name="sad">:(</string>
    <string name="no_favorite_movie_yet">There\'s no favorite movie yet!</string>
    <string name="added_to_favorite">Movie added to Favorite!</string>
    <string name="removed_from_favorite">Movie removed from Favorite!</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data">No data.</string>
    <string name="favorite_movie">My Favorite Movie</string>
    <string name="movie_finder">Movie Finder</string>
    <string name="movie_finder_is_missing_you">Movie Finder is missing you!</string>
    <string name="movie_released_today">%s is released today!</string>
    <string name="appwidget_text">EXAMPLE</string>
</resources>
