<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/sml">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="135dp"
            android:layout_height="195dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/movie_poster"
            android:maxHeight="200dp"
            android:minHeight="200dp"
            tools:srcCompat="@drawable/w185" />

        <TextView
            android:id="@+id/tv_movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_movieShortOv"
            android:layout_below="@+id/iv_poster"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/movie_title"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movieShortOv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:maxLines="2"
            android:text="@string/shortOverview" />
    </RelativeLayout>

</android.support.v7.widget.CardView>